<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/btnSeguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_stroke_button"
        android:text="@string/button_text_seguir"
        app:layout_constraintEnd_toStartOf="@+id/btnMensagem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMensagem" />

    <Button
        android:id="@+id/btnMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_stroke_button"
        android:text="@string/button_text_mensagem"
        app:layout_constraintEnd_toStartOf="@+id/btnMore"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeguir"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_stroke_button"
        android:text="@string/button_text_more"
        app:layout_constraintBottom_toBottomOf="@+id/btnMensagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMensagem" />
</androidx.constraintlayout.widget.ConstraintLayout>