<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".activity.RegistrarActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="132dp"
        android:text="@string/instagram"
        android:textColor="#FFFFFF"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textInputNomeSobrenome"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNomeSobrenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_sobrenome"
            android:inputType="textNoSuggestions"
            android:maxLength="15"
            android:paddingStart="24sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputNomeUsuariio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCadastrarBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bio"
            android:inputType="textNoSuggestions"
            android:maxLength="15"
            android:paddingStart="24sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNomeUsuariio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputNomeSobrenome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNomedeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_usuario"
            android:inputType="textNoSuggestions"
            android:maxLength="10"
            android:paddingStart="24sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputBio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:maxLength="40"
            android:paddingStart="24sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="356dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:maxLength="16"
            android:paddingStart="24sp"
            android:password="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="421dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="login"
        android:text="@string/text_sign_in"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_button_white_back"
        android:text="@string/button_text_registrar"
        android:textColor="#be377b"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputSenha" />
</androidx.constraintlayout.widget.ConstraintLayout>